# Realmz-Utility

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: format-decoder-roadmap.md
docs/scenario-format/: README.md  byte-layout-reference.md  evidence-map.md  fixtures.md  format-index.md  opcode-runtime-reference.md  opcodes-edcd.md  resource-fork-taxonomy.md  runtime-consumer-matrix.md  semantic-schema.md  source-anchors.md
docs/scenario-format/containers/: README.md  action-records.md  assets-and-runtime-caches.md  encounters.md  maps-random-and-fields.md  supporting-records.md
public/: app.js  index.html  styles.css
scripts/: check-scenario-format-artifacts.mjs  generate-scenario-format-inventory.mjs  prepare-runtime-assets.mjs
src/: icon-importer.mjs  picture-importer.mjs  png.mjs  realmz-parser.mjs  resource-fork.mjs  semantic-schema.mjs  server.mjs  tile-importer.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: pick_scenarios_folder.toml  remember_scenarios_folder.toml  save_exported_map_png.toml
src-tauri/src/: lib.rs  main.rs
